Tweaked spacing on reward modal last state faces to prevent overflow.

--- a/public/stylesheets/sass/presenter.sass
+++ b/public/stylesheets/sass/presenter.sass
@@ -480,7 +480,7 @@
 					margin-bottom: 20px
 					li
 						float: left
-						margin: 0 15px 15px 0
+						margin: 0 10px 10px 0
 						&:last-child
 							margin-right: 0
 						a
