--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -3473,7 +3473,7 @@ form.new_story, form.edit_story, .story-form {
       #presenter #reward-modal #your-reward .bottom-right-button {
         right: 40px;
         padding-right: 20px;
-        background: transparent url(../images/icons/arrowRightBlackSmall.png) no-repeat 0 0; }
+        background: transparent url(../images/icons/arrowRightBlackSmall.png) no-repeat 100% 0; }
       #presenter #reward-modal #your-reward .bottom-left-button {
         left: 50px;
         padding-left: 20px;
@@ -3528,7 +3528,7 @@ form.new_story, form.edit_story, .story-form {
           margin-bottom: 20px; }
           #presenter #reward-modal #your-reward #your-status .faces li {
             float: left;
-            margin: 0 15px 15px 0; }
+            margin: 0 10px 10px 0; }
             #presenter #reward-modal #your-reward #your-status .faces li:last-child {
               margin-right: 0; }
             #presenter #reward-modal #your-reward #your-status .faces li a {
@@ -3879,7 +3879,7 @@ form.new_story, form.edit_story, .story-form {
 #twitter-sharing, #facebook-sharing {
   width: 367px;
   padding: 20px;
-  background: #f5f2eb; }
+  background: #ededed; }
   #twitter-sharing textarea, #facebook-sharing textarea {
     display: block;
     width: 347px;
